[tool.poetry]
name = "URL Shortener"
version = "0.1.0"
description = ""
authors = ["André Felipe Dias <andref.dias@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
asyncpg = "*"
databases = "*"
email_validator = "*"
fastapi = "*"
hypercorn = "*"
loguru = "*"
orjson = "*"
passlib = { extras = ["argon2"], version = "*" }
psycopg2 = "*"
python = "^3.10"
python-dotenv = "*"
tenacity = "*"
uvloop = "*"

[tool.poetry.dev-dependencies]
asgi-lifespan = "*"
alt-pytest-asyncio = "*"
bandit = "*"
blue = "*"
Faker = "*"
flake8 = "*"
flake8-debugger = "*"
flake8-pytest-style = "*"
httpx = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pip-audit = "*"
pytest = "*"
pytest-cov = "*"
pyupgrade = "*"

[tool.isort]
profile = "black"
line_length = 82

[tool.blue]
line-length = 82

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
