[project]
name = "URL_Shortener"
version = "0.1.0"
description = ""
authors = [{ name = "André Felipe Dias", email = "andref.dias@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "alembic",
    "asyncpg",
    "databases",
    "email_validator",
    "fastapi",
    "hypercorn",
    "loguru",
    "orjson",
    "passlib[argon2]",
    "psycopg2",
    "python-dotenv",
    "tenacity",
    "uvloop",
]

[dependency-groups]
dev = [
    "asgi-lifespan",
    "httpx",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
lint.select = [
    "ARG",
    "B",
    "C4",
    "E",
    "ERA",
    "F",
    "I",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RET",
    "S",
    "T10",
    "T10",
    "UP",
    "W",
]
lint.ignore = ["B008"]
target-version = "py314"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ARG", "PLR2004", "S"]
"smoke_test.py" = ["S"]
